# elektron-mcp

./: .flake8  .gitignore  Makefile  PREGRESS.md  README.md  pyproject.toml
elektron-mcp/: elektron_types.py  main.py
elektron_mcp/: constants.py  elektron_params.py  elektron_types.py  main.py
elektron_mcp/constants/: filters.py  lfo.py
elektron_mcp/digitone/: __init__.py  digitone_config.py  digitone_params.py
elektron_mcp/digitone/config/: config.py  digitone_config.py
elektron_mcp/digitone/constants/: lfo.py  wavetone.py
elektron_mcp/digitone/controller/: amp_fx_controller.py  base_synth_controller.py  filter_controller.py  fm_drum_controller.py  fm_tone_controller.py  lfo_controller.py  swarmer_controller.py  wavetone_controller.py
elektron_mcp/digitone/models/: __init__.py  models.py
elektron_mcp/digitone/services/: amp_fx_controller.py  base_synth_controller.py  filter_controller.py  fm_drum_controller.py  fm_tone_controller.py  lfo_controller.py  swarmer_controller.py  wavetone_controller.py
elektron_mcp/digitone/utils/: parameter_utils.py
elektron_mcp/mcp_server/: server.py
elektron_mcp/midi/: __init__.py  digitone_midi.py
elektron_mcp/tools/: amp_tool.py  filter_tool.py  fx_tool.py  lfo_tool.py  wavetone_tool.py
test/ut/: test_amp.py  test_elektron_config_validation.py  test_elektron_types.py  test_filters.py  test_fmdrum.py  test_fmtone.py  test_fx.py  test_lfo.py  test_pydantic_validations.py  test_swarmer.py  test_wavetone.py  test_wavetone_midi.py
