[project]
name = "elektron-mcp"
version = "0.2.2"
authors = [{ name = "zerubeus", email = "zerubeus@gmail.com" }]
description = "MPC to control Elektron machines (Digitakt 2, Digitone 2)"
readme = "README.md"
requires-python = ">=3.12"

license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.10.6",
    "mido>=1.3.1",
    "python-rtmidi>=1.5.7",
    "mcp[cli]>=1.5.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "colorlog>=6.9.0",
    "inline-snapshot>=0.20.9",
    "pytest>=8.3.5",
]

[project.scripts]
elektron-mcp = "elektron_mcp.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["elektron_mcp"]

[project.urls]
"Homepage" = "https://github.com/zerubeus/elektron-mcp"
"Bug Tracker" = "https://github.com/zerubeus/elektron-mcp/issues"
